# pr-dashboard

./: .gitignore  404.html  Cargo.toml  flake.nix  garnix.yaml  index.html
src/: database.rs  main.rs
src/route/: extend_revervations.rs  housekeep_prs.rs  index.rs  list_reservations.rs  mod.rs  reserve_pr.rs  update_prs.rs
