[package]
name = "pr-dashboard"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
askama_escape = "0.10.3"
axum = { version = "0.7.9", features = ["macros"] }
axum-client-ip = "0.6.1"
chrono = "0.4.38"
itertools = "0.12"
octocrab = "0.42.1"
rusqlite = { version = "0.32.1", features = ["array", "buildtime_bindgen", "vtab"] }
serde_json = "1.0.133"
serde_urlencoded = "0.7.1"
tokio = { version = "1.41.1", features = ["fs", "macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["catch-panic"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release]
debug = false
